Fixed layout to avoid double scroll bars when screen size is reduced.

--- a/src/main/webapp/app/assets/app.css
+++ b/src/main/webapp/app/assets/app.css
@@ -136,7 +136,7 @@ span.name {
   padding-left:5px;
 }
 
-.ng-isolate-scope {
+body.ng-scope {
   /*height: 100%;*/
 }
 
